Use version heuristics only for local builds with plain make
The doing rpm build the relative path to the spec file might not be
the same as it is in the source tree.

When doing rpm build, feed the version info to make from spec rule.
When doing local build with make, dig it from the spec file.

--- a/lib-glib/Makefile
+++ b/lib-glib/Makefile
@@ -4,7 +4,10 @@
 
 NAME     ?= libkeepalive-glib
 ROOT     ?= /tmp/test/$(NAME)
-VERS     := $(shell awk '/^Version:/ { print $$2 }' ../rpm/keepalive.spec)
+
+# Needed for local builds with make; rpm build will set it via spec file
+VERS     ?= $(shell awk '/^Version:/ { print $$2 }' ../rpm/keepalive.spec)
+VERS     := $(VERS)
 
 # Note: library versioning != package versioning
 SO_VERS  ?= .so.1.0.0
